[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'checkmate'
version = '0.2.2'
description = 'An API for testing a Python function on an input / output suite.'
authors = [
    {name = 'Alkis Gotovos', email = 'alkis.gotovos@gmail.com'},
]
license = 'MIT'
requires-python = '>=3.9'
dependencies = [
    'pydantic==1.10.7',
]

[project.optional-dependencies]
test = [
    'pytest-cov',
]

[tool.black]
line-length = 119